# clap-digest

./: Cargo.toml  README.md
.github/workflows/: rust-audit-scheduled.yml  rust-audit.yml
examples/: cksum.rs
src/: arg.rs  lib.rs
